--- a/style.css
+++ b/style.css
@@ -1,74 +1,141 @@
-body {
-    background-image: url(abc.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    font-family: 'Righteous Regular';
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  body {
+    
+    background: url(abc.jpg);
+    font-family: sans-serif;
+  }
+  h1 {
     text-align: center;
-    object-fit: fill;
-}
-
-img{
-    padding: 3px;
-}
-    img:hover {
-        box-shadow: 5px 5px 8px rgb(84, 137, 222);
-        border-radius: 15px;
-        height: 140px;
-        width: 140px;
-        transition-duration: 0.2s;
-    }
-    img:not(:hover) {
-        border: 2px solid rgb(0, 0, 0);
-        box-shadow: 0 0 0 none;
-        border-radius: 15px;
-        height: 120px;
-        width: 120px;
-        transition-duration: 0.2s;
-    }
-    h1{
-        font-family: 'Righteous Regular'; 
-    }
-.head {
-    text-align: left;
     font-size: 340%;
     margin: 20px;
     margin-bottom: 30px;
-    text-decoration: none;
+    text-decoration: underline;
     letter-spacing: 8px;
-    color: rgb(62, 63, 64)
+    color: rgb(62, 63, 64);
+    font-family: 'Righteous Regular';
 }
-div{
-    width: 160px;
-    height: 150px;
-    display:inline-block;
-    padding-left: 100px;
-    margin-top: 40px;
-    margin-right: 100px;
-}
-
-a:not(:hover) {
-    text-align: center;
+  .login-wrapper {
+    height: 70vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
     align-items: center;
-    color: rgb(50, 115, 219);
-    font-size: 15px;
+  }
+  .form {
+    position: relative;
+    width: 100%;
+    max-width: 380px;
+    padding: 80px 40px 40px;
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
+    color: #fff;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
+  }
+  .form::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.08);
+    transform: skewX(-26deg);
+    transform-origin: bottom left;
+    border-radius: 10px;
+    pointer-events: none;
+  }
+  .form img {
+    position: absolute;
+    top: -50px;
+    left: calc(50% - 50px);
+    width: 100px;
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 50%;
+  }
+  .form h2 {
+    text-align: center;
+    letter-spacing: 1px;
+    margin-bottom: 2rem;
+    color: white;
+  }
+  .form .input-group {
+    position: relative;
+  }
+  .form .input-group input {
+    width: 100%;
+    padding: 10px 0;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    margin-bottom: 30px;
+    border: none;
+    border-bottom: 1px solid #fff;
+    outline: none;
+    background-color: transparent;
+    color: inherit;
+  }
+  .form .input-group label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px 0;
+    font-size: 1rem;
+    pointer-events: none;
+    transition: 0.3s ease-out;
+  }
+  .form .input-group input:focus + label,
+  .form .input-group input:valid + label {
+    transform: translateY(-18px);
+    color: white;
+    font-size: 0.8rem;
+  }
+  .submit-btn {
+    display: block;
+    margin-left: auto;
+    border: none;
+    outline: none;
+    color: #fdfdfd;
+    background: #ff652f;
+    font-size: 1rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: solid;
+  }
+  .forgot-pw {
+    color: inherit;
+  }
+  
+  #forgot-pw {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 0;
+    z-index: 1;
+    background: #fff;
+    opacity: 0;
+    transition: 0.6s;
+  }
+  #forgot-pw:target {
+    height: 100%;
+    opacity: 1;
+  }
+  .close {
+    position: absolute;
+    right: 1.5rem;
+    top: 0.5rem;
+    font-size: 2rem;
+    font-weight: 900;
     text-decoration: none;
-    transition-duration: 0.2s;
-}
-a:hover {
-    font-size: 20px;
-    color: rgb(181, 72, 168);
-    text-decoration: none;
-    transition-duration: 0.2s;
-}
-.hello{
-    padding-top: 20px;
-}
-.imgs{
-    height: 45px !important;
-    width: 45px !important;
-}
-.ii:hover{
-
-    height: 120px !important;
-    width: 120px !important;
-}
+    color: inherit;
+  }
+  
